spinnaker-gate-ingress.yaml
#
#  Author: Hari Sekhon
#  Date: 2021-06-03 19:36:55 +0100 (Thu, 03 Jun 2021)
#
#  vim:ts=2:sts=2:sw=2:et
#
#  https://github.com/harisekhon/kubernetes-templates
#
#  License: see accompanying Hari Sekhon LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/HariSekhon
#

# ============================================================================ #
#            S p i n n a k e r   G a t e   ( A P I )   I n g r e s s
# ============================================================================ #

# Needed for Deck UI to be able to talk to Gate API

# XXX: you will need to reconfigure the Deck & Gate URLs to match the host names configured below:
#
#     hal config security ui edit --override-base-url https://spinnaker.DOMAIN.COM
#     hal config security api edit --override-base-url https://spinnaker-gate.DOMAIN.COM
#

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spin-gate
  namespace: spinnaker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # XXX: Edit to make available externally or apply common ingress.nginx.patch.yaml with shared IP list eg. Cloudflare
    nginx.ingress.kubernetes.io/whitelist-source-range: |
      10.0.0.0/8,
      172.16.0.0/16,
      192.168.0.0/16
spec:
  tls:
    # XXX: Edit
  - hosts:
    - spinnaker-gate.DOMAIN.COM
    secretName: spinnaker-gate-tls
  rules:
    # XXX: Edit
  - host: spinnaker-gate.DOMAIN.COM
    http:
      paths:
      - path: /
        backend:
          serviceName: spin-gate
          servicePort: 8084
